# uv2json

./: .gitignore  .pypirc  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build.yml
src/uv2json/: __init__.py
uv2json/: __init__.py
